--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 BVI - Binary visual editor
 ==========================
 http://bvi.sourceforge.net/
+https://github.com/buergmann/bvi
 
 This editor for binary files was written by Gerhard Buergmann
 and is distributed under the GPL (GNU Public License).
@@ -13,8 +14,6 @@ How to compile
 	https://www.cyberciti.biz/faq/linux-install-ncurses-library-headers-on-debian-ubuntu-centos-fedora/
 
 
-	gunzip -c bvi-1.4.1rc.src.tar.gz | tar xvf -
-	cd bvi-1.4.1rc
 	./configure
 	make
 	make install
@@ -48,4 +47,6 @@ Gerhard Buergmann
 Vienna, Austria
 E-mail: gerhard@puon.at
 
+or post an issue at:
+https://github.com/buergmann/bvi/issues
 
