--- a/README
+++ b/README
@@ -13,8 +13,8 @@ How to compile
 	https://www.cyberciti.biz/faq/linux-install-ncurses-library-headers-on-debian-ubuntu-centos-fedora/
 
 
-	gunzip -c bvi-1.4.1rc.src.tar.gz | tar xvf -
-	cd bvi-1.4.1rc
+	gunzip -c bvi-1.4.1.src.tar.gz | tar xvf -
+	cd bvi-1.4.1
 	./configure
 	make
 	make install
